[package]
name = "access-kit-request-redraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.11.0"
accesskit_winit = "0.14.1"
gl = "0.14.0"
glutin = "0.30.9"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
skia-safe = { version = "0.63.0", features = ["gl", "textlayout", "svg"] }
winit = "0.28.6"
